spade-tests/src/snapshots/spade_tests__ast_lowering__duplicate_item_names7.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn b() -> bool {
    true
}
mod x {fn b() -> bool {true}}
use x::b;


error: Multiple items with the same name
  ┌─ testinput:1:4
  │
1 │ fn b() -> bool {
  │    ^ b is defined multiple times
  ·
5 │ use x::b;
  │     ---- Previous definition here
