spade-tests/src/snapshots/spade_tests__ast_lowering__enum_variant_pattern_without_arguments_one.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum E {
    Variant { b: bool },
}

fn f(e: E) -> bool {
    let E::Variant = e;
    false
}


error: Expected 1 arguments, got 0
  ┌─ testinput:6:9
  │
6 │     let E::Variant = e;
  │         ^^^^^^^^^^ Expected 1 argument for this enum variant
  │
  = help: Add arguments here
  │
6 │     let E::Variant(_) = e;
  │                   +++
