spade-tests/src/snapshots/spade_tests__ast_lowering__enum_variant_pattern_without_arguments_three.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum E {
    Variant { b1: bool, b2: bool, b3: bool },
}

fn f(e: E) -> bool {
    let E::Variant = e;
    false
}


error: Expected 3 arguments, got 0
  ┌─ testinput:6:9
  │
6 │     let E::Variant = e;
  │         ^^^^^^^^^^ Expected 3 arguments for this enum variant
  │
  = help: Add arguments here
  │
6 │     let E::Variant(_, _, _) = e;
  │                   +++++++++
