spade-tests/src/snapshots/spade_tests__ast_lowering__enums_can_not_have_transitive_ports.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct port A {}
enum X {
    A{x: A}
}

error: Port in enum
  ┌─ testinput:3:10
  │
2 │ enum X {
  │      - This is an enum
3 │     A{x: A}
  │          ^ This is a port
