spade-tests/src/snapshots/spade_tests__ast_lowering__expect_function_got_pipeline_error_works.snap
---
source: spade-tests/src/ast_lowering.rs
---
pipeline(0) x(clk: clock) -> bool {true}

entity test(clk: clock) -> bool {
    x(clk)
}

error: Expected `inst` and pipeline depth for pipeline instantiation
  ┌─ testinput:4:5
  │
1 │ pipeline(0) x(clk: clock) -> bool {true}
  │ ----------- x is defined as a pipeline here
  ·
4 │     x(clk)
  │     ^
  │     │
  │     Expected pipeline instantiation
  │     Because x is a pipeline
  │
  = Consider instantiating the pipeline with a depth
  │
4 │     inst(/*depth*/) x(clk)
  │     ++++++++++++++++
